# egurm_server

./: .gitignore  CMakeLists.txt  README.md
Client/: Client.hpp  client_entry_point.cpp  run_server.bat
Client/inc/: Client.hpp
Client/src/: Client.cpp
Server/: main.cpp
Server/inc/: DBConnection.hpp  DBSession.hpp  Logger.hpp  SQLQueries.hpp  Server.hpp  Session.hpp  includes.hpp
Server/src/: DBConnection.cpp  DBSession.cpp  Server.cpp  Session.cpp
